Update FibonacciInput.html , JosephInput.html , web.xml , FibonacciSequenceFunction.java , FibonacciServlet.java , JosephServlet.java Add jquery.js

--- a/WebContent/FibonacciInput.html
+++ b/WebContent/FibonacciInput.html
@@ -5,7 +5,7 @@
 <title>Fibonacci Problem Solve</title>
 </head>
 <body>
-	<form action="http://localhost:8080/FunctionServlet/FibonacciResult"
+	<form action="http://localhost:8080/FunctionServlet/FibonacciResult?length=10"
 		method="get">
 		<p style="display:inline; font-size: 15px; font-weight: bold">Length:</p>
 		<input style="width: 50px; text-align: right" type="text"
