Add logical processing to JosephInputNew.html ; change the format of json ; move FibonacciSequenceFunction.java and JosephProblemFunction.java to package src.com.harvey.solve.service ;

--- a/WebContent/JosephInputNew.html
+++ b/WebContent/JosephInputNew.html
@@ -31,35 +31,17 @@
 			<li class="li-input">
 				<div>
 					<label class="label-names-tag">Names</label>
-					<ol class="ol-name" id="nameslist">
-						<li class="li-for-name" id="li1" onblur="show()">
-							<label class="label-name" >A</label>
-							<div class="div-option" >
-								<button class="button-lable-option">Insert</button>
-							    <button class="button-lable-option">Delete</button>
-							    <button class="button-lable-option">Up</button>
-							    <button class="button-lable-option">Down</button>
-							    <button class="button-lable-option">Rename</button>
-							 </div>
-						</li>
-						<li class="li-for-name" id="li2" onblur="show()">
-							<label class="label-name" >B</label>
-							<div class="div-option" >
-								<button class="button-lable-option">Insert</button>
-							    <button class="button-lable-option">Delete</button>
-							    <button class="button-lable-option">Up</button>
-							    <button class="button-lable-option">Down</button>
-							    <button class="button-lable-option">Rename</button>
-							 </div>
-						</li>
-						<li class="li-input-field"><input class="input-name-field" type="text" id="nameinput" disabled="disabled" onblur="blurfunction()"/></li>
-						<li class="li-buttons">
-							<button class="button-append" type="button" id="appendbt" onclick="append()">Append</button>
-							<button class="button-clear" type="button" id="clearbt" onclick="clear()">Clear</button>
-						</li> 
-					</ol>
-
+					<ol class="ol-name" id="nameslist">	</ol>
 				</div>
+			</li>
+			<li>
+				<div class="div-input-buttons">
+						<input class="input-name-field" type="text" id="nameinput" disabled="disabled" onblur="blurfunction()"/>
+						<div class="div-append-clear">
+							<button class="button-append" type="button" id="appendbt" onclick="append()">Append</button>
+							<button class="button-clear" type="button" id="clearbt" onclick="clearAll()">Clear</button>
+						</div>
+				</div> 
 			</li>
 		</ul>
 		<ul class="ul-result">
