Change project name to Solve; Change NewJosephServlet.java ,use JSONObject instead of GSON; Configure maven project,add dependencies.

--- a/WebContent/JosephInput.html
+++ b/WebContent/JosephInput.html
@@ -12,7 +12,7 @@
 	
 </head>
 <body>
-	<form action="http://localhost:8080/FunctionServlet/JosephResult"
+	<form action="http://localhost:8080/solve/JosephResult"
 		method="post">
 		<input type="hidden" id="circle" name="circle">
 		<p style="font-size: 15px; font-weight: bold">Input the circle(Separated by spaces):</p>  
