Move js files to WebContent/js/ ,delete useless functions in script.js; Adjust the interface of JosephInputNew.html.

--- a/WebContent/JosephInputNew.html
+++ b/WebContent/JosephInputNew.html
@@ -8,8 +8,8 @@
 			@import url(css/mycss.css);
 	</style>
 	
-	<script src="jquery.js"></script>
-	<script type="text/javascript" src="script.js"></script>
+	<script src="js/jquery.js"></script>
+	<script type="text/javascript" src="js/script.js"></script>
 	
 </head>
 <body class="body-background">
