--- a/WebContent/JosephInput.html
+++ b/WebContent/JosephInput.html
@@ -3,13 +3,9 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<title>Joseph Problem Solve</title>
-	<style type="text/css">
-			@import url(css/mycss.css);
-	</style>
-	
+	<link rel="stylesheet" type="text/css" href="css/mycss.css">
 	<script src="js/jquery.js"></script>
 	<script type="text/javascript" src="js/script.js"></script>
-	
 </head>
 <body>
 	<form action="http://localhost:8080/solve/JosephResult"
