--- a/WebContent/JosephInputNew.html
+++ b/WebContent/JosephInputNew.html
@@ -1,16 +1,11 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-<title>Insert title here</title>
-
-	<style type="text/css">
-			@import url(css/mycss.css);
-	</style>
-	
+	<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+	<title>Insert title here</title>
+	<link rel="stylesheet" type="text/css" href="css/mycss.css">	
 	<script src="js/jquery.js"></script>
-	<script type="text/javascript" src="js/script.js"></script>
-	
+	<script type="text/javascript" src="js/script.js"></script>	
 </head>
 <body class="body-background">
 	<div class="div-background">
